<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        app:cardBackgroundColor="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"></include>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/select_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Category"
                app:met_floatingLabel="normal"/>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/select_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Doctor"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/select_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Schedule"
                app:met_floatingLabel="normal"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textILayout_usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/edt_usr_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textILayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textILayout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textILayout_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message"
                    android:lines="5" />

                <LinearLayout
                    android:id="@+id/pic_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/txt_right_pic"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="false"
                            android:paddingBottom="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:src="@drawable/empty_img" />

                        <Button
                            android:id="@+id/btn_right_pic"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:text="@string/right_view" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#c0c0c0" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/txt_front_pic"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="false"
                            android:paddingBottom="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:src="@drawable/empty_img" />

                        <Button
                            android:id="@+id/btn_front_pic"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:text="@string/front_view" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#c0c0c0" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/txt_top_pic"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="false"
                            android:paddingBottom="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:src="@drawable/empty_img" />

                        <Button
                            android:id="@+id/btn_top_pic"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:text="@string/top_view" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#c0c0c0" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/txt_back_pic"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="false"
                            android:paddingBottom="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:src="@drawable/empty_img" />

                        <Button
                            android:id="@+id/btn_back_pic"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:text="@string/back_view" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view4"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#c0c0c0" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/txt_left_pic"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="false"
                            android:paddingBottom="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:src="@drawable/empty_img" />

                        <Button
                            android:id="@+id/btn_left_pic"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:text="@string/left_view" />

                    </RelativeLayout>
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="Pitampura Clinic :"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="ED-59A\nNear Pitampura Metro Staion, Madhuban Chowk,\nDelhi – 110088, Ph: + 91-999 957 0494 \n" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="Kamla Nagar Clinic:"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="7266, 1st Floor (Above Action Shoes)\nNear Shakti Nagar Chowk,  Prem Nagar \nMain G.T.Road, Delhi -110007\nPh.: +91- 11- 6463 1210, +91-989 136 3251\n" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>